--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@ html {
 body {
   font-family: 'Press Start 2P', sans-serif, cursive;
   color: #eee;
-  background-color: #222;
-  /* background-color: #60b347; */
+  /* background-color: #222; */
+  background-color: #60b347;
 }
 
 /* --------------Layout Design----------------------- */
